--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,5 @@
 {
-// Документацию по формату tasks.json см.
-    // по адресу https://go.microsoft.com/fwlink/?LinkId=733558
+// more info: https://go.microsoft.com/fwlink/?LinkId=733558
     "version": "2.0.0",
     "tasks": [
         {
